# darts-calculator

./: LICENSE  README.md  darts-calc.cabal
src/: CheckoutTable.hs  DartShots.hs  Darts.hs  FindFinish.hs
