name:                darts-cabal
version:             0.1.0.0
synopsis:            Darts checkout calculator
description:         A program to calculate a particular darts finish or to produce a checkout table
license:             MIT
license-file:        LICENSE
author:              urmastalimaa
maintainer:          urmas7@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable find-finish
  main-is:             FindFinish.hs
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
